--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "devDependencies": {
         "cross-env": "^5.1",
         "laravel-mix": "^5.0.1",
+        "laravel-mix-purgecss": "^5.0.0-rc.1",
         "resolve-url-loader": "2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "7.*",
+        "tailwindcss": "^1.2.0",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
