--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "apollo-boost": "^0.4.7",
         "axios": "^0.19",
-        "vue": "^2.5.17"
+        "graphql": "^14.6.0",
+        "vue": "^2.5.17",
+        "vue-apollo": "^3.0.3"
     }
 }
