--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     },
     "dependencies": {
         "apollo-boost": "^0.4.7",
+        "apollo-cache-inmemory": "^1.6.5",
+        "apollo-link": "^1.2.13",
+        "apollo-link-http": "^1.5.16",
         "axios": "^0.19",
         "graphql": "^14.6.0",
+        "graphql-tag": "^2.10.3",
         "vue": "^2.5.17",
         "vue-apollo": "^3.0.3"
     }
