--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "axios": "^0.19",
         "graphql": "^14.6.0",
         "vue": "^2.5.17",
-        "vue-apollo": "^3.0.3"
+        "vue-apollo": "^3.0.3",
+        "vue-router": "^3.1.6"
     }
 }
